--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,14 @@
 version: 2.1
 jobs:
   build:
+    working_directory: ~/1CircleCI/repo
     docker: 
       - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
     steps:
       - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+      - run: echo "grace circleci world" # run the `echo` command
+          command: | # use pipenv to install dependencies
+             pip3 install python3.8
+             pip3 install pandas
+             pip3 install numpy
+      - test: python3 -m unittest
