--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,6 @@ jobs:
             pipenv run python --version 
             mkdir -p /tmp/test-results
             python test_hello.py
+
+      - store_test_results:
+            path: /tmp/test-reports
