--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,6 @@ jobs:
 
       - store_test_results:
             path: ~/test-results
+      - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
+          path: test-results
+          destination: tr1
