--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,8 @@ jobs:
             pipenv run python --version 
             mkdir -p ~/test-results
             touch ~/test-results/report.html
-            cd test_framework
-            export PYTHONPATH=$PYTHONPATH:.
       - run:
-          name: "test_catalog_row_title. example:'Home'"
+          name: "test_catalog_row_title. example: Home"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
