--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,6 @@ jobs:
             sudo pip install pipenv
             pipenv install
       - run:
-          name: "check python version"
-          command: |
-            pipenv run python --version 
-            mkdir -p ~/test-results
-            touch ~/test-results/report.html
-      - run:
           name: "test_catalog_row_title. example: Home"
           command: |
             cd test_framework
@@ -37,55 +31,55 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_title
       - run:
-          name: "test_catalog_home_row_one_title. compare title of 1301 "
+          name: "test_catalog_home_row_one_title. compare title of 1301 'Trending Now'"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_one_title
       - run:
-          name: "test_catalog_home_row_two_title. compare title of 9"
+          name: "test_catalog_home_row_two_title. compare title of 9 'Apps'"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_two_title
       - run:
-          name: "test_catalog_home_row_three_title. compare title "
+          name: "test_catalog_home_row_three_title. compare title of 1537 'Free Channels' "
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_three_title
       - run:
-          name: "test_catalog_home_row_four_title. compare title "
+          name: "test_catalog_home_row_four_title. compare title of 1517 'New Movies to Rent' "
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_four_title
       - run:
-          name: "test_catalog_home_row_five_title. compare title "
+          name: "test_catalog_home_row_five_title. compare title of 1142 'Free this Mont'"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_five_title
       - run:
-          name: "test_catalog_home_row_length. example: 5"
+          name: "test_catalog_home_row_length. 'New Hero - 2019' row len 5"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_length
       - run:
-          name: "test_catalog_home_row_one_length. compare length of 1301"
+          name: "test_catalog_home_row_one_length. 1301 'Trending Now' eg. 9"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_one_length
       - run:
-          name: "test_catalog_home_row_two_length. compare length of Apps"
+          name: "test_catalog_home_row_two_length. 9 Apps row length eg. 45"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_two_length
       - run:
-          name: "test_catalog_home_row_three_length. compare length "
+          name: "test_catalog_home_row_three_length. 1537 'Free Channels' length  "
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
@@ -96,13 +90,6 @@ jobs:
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_four_length
-
-      - store_test_results:
-            path: ~/test-results
-      - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: test-results
-          destination: tr1
-
       - store_test_results:
             path: ~/test-results
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
