--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_four_title
       - run:
-          name: "test_catalog_home_row_five_title. compare title of 1142 'Free this Mont'"
+          name: "test_catalog_home_row_five_title. compare title of 1142 'Free this Month'"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
@@ -90,6 +90,18 @@ jobs:
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog.CatalogTest.test_catalog_home_row_four_length
+      - run:
+          name: "test_common_item_details_subtitle_item eg. common item in 1300 subtitle 'Free to Watch' "
+          command: |
+            cd test_framework
+            export PYTHONPATH=$PYTHONPATH:.
+            python -m unittest test.test_catalog_row_items.CatalogRowItemTest.test_common_item_details_subtitle_item
+      - run:
+          name: "test_common_item_details_subtitle_item1 eg. common item in 1300 subtitle 'Click to Watch' "
+          command: |
+            cd test_framework
+            export PYTHONPATH=$PYTHONPATH:.
+            python -m unittest test.test_catalog_row_items.CatalogRowItemTest.test_common_item_details_subtitle_item1
       - store_test_results:
             path: ~/test-results
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
