--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,9 @@ jobs:
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
+            mkdir -p ./gtest-results
+            ls ./gtest_results
             python -m xmlrunner test.test_catalog
-            mkdir -p ~/gtest-results
       - run:
           name: "test_common_item_details_subtitle_item eg. common item in 1300 subtitle 'Free to Watch' "
           command: |
