--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
-            mkdir -p ./gtest-results
+            mkdir -p ./gtest_results
             ls ./gtest_results
             python -m xmlrunner test.test_catalog
       - run:
