fix yml store_test_results path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,8 +124,7 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:.
             python -m unittest test.test_catalog_row_items.CatalogRowItemTest.test_common_item_details_subtitle_item1
       - store_test_results:
-            cd test_framework
-            path: gtest_results
+            path: test_framework/gtest_results
             ls gtest_results
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: test-results
