--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,17 @@ jobs:
           command: | # use pipenv to install dependencies
             sudo pip install pandas
             sudo pip install pipenv
+            sudo pip install PyUnitReport
             sudo pip install unittest-xml-reporting
             pipenv install
+      - run:
+          name: "test_catalog. example: Home"
+          command: |
+            cd test_framework
+            export PYTHONPATH=$PYTHONPATH:.
+            mkdir -p ./gtest_results
+            ls ./gtest_results
+            python test/test_catalog.py catalog-dev.smartcasttv.com api-stage.vizio.com 
       - run:
           name: "test_catalog. example: Home"
           command: |
