--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 nightly:
   triggers:
     - schedule:
-        cron: "10 * * * *"
+        cron: "*/5 * * * *"
         filters:
           branches:
             only:
