--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,21 +19,19 @@ jobs:
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
-            mkdir -p ./gtest_results
-            ls ./gtest_results
-            python3 -m xmlrunner test.test_catalog -o gtest_results
+            mkdir -p ./reports
+            ls ./reports
+            python3 -m xmlrunner test.test_catalog -o reports
       - run:
-          name: "test_catalog2.py html output"
+          name: "test_catalog2.py html format"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
-            mkdir -p ./gtest_results
-            ls ./gtest_results
-            python3 test/test_catalog2.py
+            python3 test/test_catalog2.py -v
       - store_test_results:
-            path: test_framework/gtest_results
+            path: test_framework/reports
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: test_framework/gtest_results 
+          path: test_framework/reports
           destination: tr1
 
 workflows:
