--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,13 @@ jobs:
             export PYTHONPATH=$PYTHONPATH:.
             mkdir -p ./reports
             ls ./reports
-            python3 -m xmlrunner test.test_catalog -o reports
+            python -m xmlrunner test.test_catalog -o reports
       - run:
           name: "test_catalog2.py html format"
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
-            python3 test/test_catalog2.py -v
+            python test/test_catalog2.py -v
       - store_test_results:
             path: test_framework/reports
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
