--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,12 @@ jobs:
             sudo pip install unittest-xml-reporting
             pipenv install
       - run:
+          name: "test_item_details.py "
+          command: |
+            cd test_framework
+            export PYTHONPATH=$PYTHONPATH:.
+            python test/test_item_details.py -v
+      - run:
           name: "test_catalog.py "
           command: |
             cd test_framework
@@ -22,12 +28,6 @@ jobs:
             mkdir -p ./reports
             ls ./reports
             python -m xmlrunner test.test_catalog -o reports
-      - run:
-          name: "test_item_details.py html format"
-          command: |
-            cd test_framework
-            export PYTHONPATH=$PYTHONPATH:.
-            python test/test_item_details.py -v
       - store_test_results:
             path: test_framework/reports
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
