--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python test/test_item_details.py -v
-            python -m xmlrunner test.test_catalog -o reports
+            echo 'running test_catalog.py...'
+            python test/test_catalog.py
       - store_test_results:
             path: test_framework/reports
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
