--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,12 @@ jobs:
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python test/test_item_details.py -v
+      - run:
+          name: "test_catalog.py "
+          command: |
             echo 'running test_catalog.py...'
+            cd test_framework
+            export PYTHONPATH=$PYTHONPATH:.
             python test/test_catalog.py
       - store_test_results:
             path: test_framework/reports
