--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,15 +15,15 @@ jobs:
             sudo pip install unittest-xml-reporting
             pipenv install
       - run:
-          halt_build_on_fail: false  # default true
           name: "test_item_details.py "
+          halt_build_on_fail: false
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python test/test_item_details.py -v
       - run:
-          halt_build_on_fail: false  # default true
           name: "test_catalog.py "
+          halt_build_on_fail: false
           command: |
             echo 'running test_catalog.py...'
             cd test_framework
