--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       - run:
           name: "test_item_details.py "
           halt_build_on_fail: false
+          when: always
           command: |
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
@@ -24,6 +25,7 @@ jobs:
       - run:
           name: "test_catalog.py "
           halt_build_on_fail: false
+          when: always
           command: |
             echo 'running test_catalog.py...'
             cd test_framework
