--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,15 @@ jobs:
             cd test_framework
             export PYTHONPATH=$PYTHONPATH:.
             python test/test_catalog.py
+        - run:
+          name: "test_rows.py "
+          halt_build_on_fail: false
+          when: always
+          command: |
+            echo 'running test_rows.py...'
+            cd test_framework
+            export PYTHONPATH=$PYTHONPATH:.
+            python test/test_rows.py
       - run:
           name: "test_item_details.py "
           halt_build_on_fail: false
