--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
       - run:
           name: "echo env var"
           command: |
+            echo 'test_env'
+            cd test_framework
+            export PYTHONPATH=$PYTHONPATH:.
             export VIZIO_TEST_ENV=dev
             echo 'VIZIO_TEST_ENV is'
             echo $VIZIO_TEST_ENV
